test/_generated-libs/undici/undici/errors/HTTPParserError.hx
package undici.errors;

@:jsRequire("undici", "errors.HTTPParserError") extern class HTTPParserError extends UndiciError {
	static var prototype : HTTPParserError;
}